--- a/caffeine/README
+++ b/caffeine/README
@@ -8,8 +8,8 @@ standard functions to allow you the construction of services and some
 command line tools.
 
 * Contacts
-    Daniel Molina Wegener <dmw@unete.cl> (Main Author)
+    Daniel Molina Wegener <dmw@coder.cl> (Main Author)
 
 * Web Site
-    http://coder.cl/prj/caffeine/
+    http://caffeine.coder.cl/
 
